--- a/style.css
+++ b/style.css
@@ -61,7 +61,6 @@ padding-top: 100px
   position: absolute;
   left: 700px;
   top: 200px; 
-  padding-right: 50px
   
 }
 
@@ -99,4 +98,30 @@ h4 {
    font-family: 'RavaliItalic';
    font-weight: normal;
    font-style: italic;
+}
+.font2 {
+  font-family: 'Castoro', serif;
+}
+
+.sfimage {
+  /* The image used */
+  background-image: url("https://rotarympls.org/wp-content/uploads/2017/05/main_background_yellow_city2.jpg");
+
+  height:100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.option {
+  display:inline-block;
+  width:250px;
+  height:250px;
+  margin:15px;
+}
+
+body,html {
+  height:105%;
 }
